--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,8 +2,5 @@
   "name": "@coin/utils",
   "version": "1.0.0",
   "main": "index.ts",
-  "license": "ISC",
-  "dependencies": {
-    "vue": "^3.3.4"
-  }
+  "license": "ISC"
 }
