--- a/package.json
+++ b/package.json
@@ -2,26 +2,28 @@
   "name": "root",
   "version": "1.0.0",
   "scripts": {
-    "dev": "pnpm -C example dev",
+    "dev": "pnpm run -C example dev",
     "patch": "pnpm run -C packages/coin-ui patch",
-    "build": "pnpm -C packages/coin-ui build",
-    "publish": "pnpm -C packages/coin-ui publish"
+    "build": "pnpm run -C packages/coin-ui build",
+    "publish": "pnpm run -C packages/coin-ui publish"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.197",
     "coin-components": "workspace:^",
     "coin-ui": "workspace:^",
-    "vue": "^3.3.4",
-    "element-plus": "^2.3.12"
+    "element-plus": "^2.3.12",
+    "lodash": "^4.17.21",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@types/node": "^20.5.8",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.66.1",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5",
     "vite-plugin-dts": "^3.5.3",
-    "sass": "^1.66.1"
+    "vue-tsc": "^1.8.5"
   }
 }
