--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "pnpm run -C example dev",
     "patch": "pnpm run -C packages/coin-ui patch",
     "build": "pnpm run -C packages/coin-ui build",
-    "publish": "pnpm run -C packages/coin-ui publish"
+    "publish": "pnpm run -C packages/coin-ui publish",
+    "release": "pnpm run -C packages/coin-ui release"
   },
   "dependencies": {
     "@types/lodash": "^4.14.197",
