--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
   "name": "root",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "pnpm run -C example dev",
-    "patch": "pnpm run -C packages/coin-ui patch",
-    "build": "pnpm run -C packages/coin-ui build",
-    "publish": "pnpm run -C packages/coin-ui publish",
-    "release": "pnpm run -C packages/coin-ui release --increment minor"
-  },
   "dependencies": {
     "@types/lodash": "^4.14.197",
     "coin-components": "workspace:^",
@@ -16,10 +9,15 @@
     "lodash": "^4.17.21",
     "vue": "^3.3.4"
   },
+  "scripts": {
+    "commit": "cz"
+  },
   "devDependencies": {
     "@release-it/conventional-changelog": "^7.0.1",
     "@types/node": "^20.5.8",
     "@vitejs/plugin-vue": "^4.2.3",
+    "commitizen": "^4.3.0",
+    "cz-git": "^1.7.1",
     "release-it": "^16.1.5",
     "sass": "^1.66.1",
     "typescript": "^5.0.2",
@@ -28,5 +26,10 @@
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.3",
     "vue-tsc": "^1.8.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
   }
 }
