--- a/packages/coin-ui/package.json
+++ b/packages/coin-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coin-ui",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": false,
   "license": "MIT",
   "author": "alex12306",
@@ -34,16 +34,6 @@
   "scripts": {
     "build": "vite build",
     "publish-npm": "npm publish",
-    "release": "release-it",
-    "commit": "cz"
-  },
-  "devDependencies": {
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "release": "release-it"
   }
 }
