--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "commit": "cz",
     "build": "pnpm run -C packages/coin-ui build",
     "release": "pnpm run -C packages/coin-ui release",
-    "prepare": "husky install"
+    "prepare": "git init && husky install",
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@release-it/conventional-changelog": "^7.0.1",
     "@types/node": "^20.5.8",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "commitizen": "^4.3.0",
     "cz-git": "^1.7.1",
+    "eslint": "^8.7.0",
+    "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^2.5.1",
     "release-it": "^16.1.5",
     "sass": "^1.66.1",
     "typescript": "^5.0.2",
