--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.197",
+    "@vueuse/core": "^10.4.1",
     "coin-components": "workspace:^",
     "coin-ui": "workspace:^",
-    "lodash": "^4.17.21",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -38,7 +38,6 @@
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
-    "naive-ui": "^2.34.4",
     "prettier": "^2.5.1",
     "release-it": "^16.1.5",
     "sass": "^1.66.1",
