--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.3",
+    "vitepress": "1.0.0-rc.10",
     "vue-tsc": "^1.8.5"
   }
 }
