fix: test workflows

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,5 +4,8 @@
   "type": "module",
   "devDependencies": {
     "vitepress": "1.0.0-rc.10"
+  },
+  "dependencies": {
+    "coin-ui": "workspace:^"
   }
 }
