--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Build
         run: pnpm docs:build
 
+      - name: Build
+        run: pnpm coin-ui:build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
