--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,18 @@ jobs:
       - name: Build
         run: pnpm docs:build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
+      - name: HUAWEI-YUN
+        uses: easingthemes/ssh-deploy@v2.1.5
+        env:
+          #私钥
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_PRIVATE_KEY }}
+          #SCp参数
+          ARGS: "-rltgoDzvO --delete"
+          #源目录
+          SOURCE: "docs/.vitepress/dist"
+          #服务器Ip:换成你的服务器iP
+          REMOTE_HOST:  ${{ secrets.SERVER_HOST }}
+          #用户
+          REMOTE_USER: "root"
+          #目标地址
+          TARGET: "/www/wwwroot/coin-ui/dist"
