--- a/packages/coin-ui/package.json
+++ b/packages/coin-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coin-ui",
-  "version": "2.3.3",
+  "version": "2.3.6",
   "private": false,
   "license": "MIT",
   "author": "alex12306",
@@ -8,10 +8,10 @@
   "type": "module",
   "main": "./dist/lib/coin-ui/index.js",
   "module": "./dist/es/coin-ui/index.mjs",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/coin-ui/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./dist/coin-ui/index.d.ts",
       "import": "./dist/es/coin-ui/index.mjs",
       "require": "./dist/lib/coin-ui/index.js"
     },
@@ -32,5 +32,8 @@
   "homepage": "https://ui.bhcdd.top",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.4.1"
   }
 }
