test(vitest): 添加vitest功能;增加button和message的单元测试

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    // 不用再每个测试文件都导入expect、test
+    "types": ["vitest/globals"]
   },
   "include": [
     "example/**/*.ts",
