--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "example:dev": "cd example && vite",
     "example:build": "cd example && vite build",
     "example:preview": "cd example && vite preview",
+    "test": "vitest",
     "commit": "cz",
     "coin-ui:build": "cd packages/coin-ui && vite build",
     "coin-ui:release": "cd packages/coin-ui && release-it",
@@ -39,19 +40,24 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vue/test-utils": "^2.4.1",
     "commitizen": "^4.3.0",
     "cz-git": "^1.7.1",
     "eslint": "^8.7.0",
     "eslint-plugin-vue": "^9.17.0",
+    "happy-dom": "^11.0.2",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^2.5.1",
     "release-it": "^16.1.5",
     "sass": "^1.66.1",
     "typescript": "^5.0.2",
+    "unplugin-vue-macros": "^2.5.0",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.3",
     "vitepress": "1.0.0-rc.10",
+    "vitest": "^0.34.4",
     "vue-tsc": "^1.8.5"
   }
 }
